# bun_vs_rust

./: Cargo.toml  README.md  index.js
src/: main.rs
