[package]
name = "bun_vs_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum={version ="*", features = ["headers"]}
tokio = {version = "*", features=["full"]}
serde={version = "1.0", features = ["derive"]}
serde_json = "1.0"
maud = "*"
